Fri Aug 13 11:22:02 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Single thread through the tcpwrappers code, thanks to
				David Champion <dgc*uchicago.edu>

Fri Aug 13 10:28:40 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Fix compilation error with Sun's SUNWspro
					compiler

Thu Aug 12 16:10:31 CEST 2004 (tk)
----------------------------------
  * etc/freshclam.conf: add example of PidFile directive (thanks to Youza
			Youzovic <youza*post.cz>)
  * libclamav: readdb: fix possible memory leaks (patch by Igor Brezac
	       <igor*ypass.net>)

Thu Aug 12 13:19:37 BST 2004 (njh)
----------------------------------
  * clamav-milter:	--from=EMAIL option didn't always work, reported by
				"Sergey Y. Afonin" <asy*kraft-s.ru>

Thu Aug 12 11:36:36 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	checkURLs code (not compiled by default) can now
				download using LIBCURL

Wed Aug 11 16:29:05 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	No longer needs curl.h to compile (thanks to TK)

Wed Aug 11 15:46:56 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Better handling of false positive emails, that is
				parts of data embedded in emails which look
				like other emails to be scanned, but aren't
				Thanks to Trog for the idea

Wed Aug 11 11:34:57 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Installed a new isLocalAddr checker written by
				David Champion <dgc*uchicago.edu>

Tue Aug 10 15:53:25 CEST 2004 (tk)
----------------------------------
  * clamdscan: support --disable-summary for backward compatibility (problem
	       reported by Tomasz Papszun)

Mon Aug  9 23:31:53 CEST 2004 (tk)
----------------------------------
  * libclamav: add new option CL_MAILURL

Mon Aug  9 09:27:02 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	checkURLs code (not enabled by default) is now thread
				safe
