@@ -1,3 +1,7 @@
+Sat Aug 14 12:50:07 CEST 2004 (tk)
+----------------------------------
+  * libclamav: add support for FSG 1.33 (aCaB)
+
 Fri Aug 13 11:22:02 BST 2004 (njh)
 ----------------------------------
   * clamav-milter:	Single thread through the tcpwrappers code, thanks to
